crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__binary_expression_left_operand_comment.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ExprNumberLiteral,
        range: 11..12,
        source: `5`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing left comment",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ExprNumberLiteral,
        range: 79..80,
        source: `3`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading right comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
