crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__dangling_comment.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Parameters,
        range: 9..39,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Some comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
}
