crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__empty_file.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{}
