crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__leading_most_outer.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtExpr,
        range: 19..20,
        source: `x`,
    }: {
        "leading": [
            SourceComment {
                text: "# leading comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
